arCHMage 0.3.1
==============
Bug fixes:

* [CVE-2015-1589] Fixed directory traversal bug

arCHMage 0.3
============
Changes:

* Global /etc/archmage/arch.conf configuration file has been moved to the
  package contents and is no longer customizable

Bug fixes:

* [Debian #776097] Fixed parsing CHM files with no topic tree

arCHMage 0.2.4
==============
Bug fixes:

* [SF #2812715] Incorrect arch_contents.html generation on irrlicht.chm


arCHMage 0.2.3
==============
Bug fixes:

* Fixing caching bug (affects on mod_chm module)


arCHMage 0.2.2
==============
Bug fixes:

* [SF #2802208] Garbled data attached to output


arCHMage 0.2.1
==============
Bug fixes:

* HTMLDOC doesn't working with missing <H1>...</H1> tag


arCHMage 0.2
============
Changes/New features:

* CHM -> Single HTML conversion
* CHM -> PDF conversion
* CHM -> Plain Text conversion

* Changed option - 'dump' for dumping HTML data from CHM file into standard output.

* Huge code re-factoring and lot of small changes/fixes...

Bug fixes:

* [SF #1767529] IOError exception using CHM dump option
* [SF #1955872] import error
* [SF #1805070] TOC is broken after decompilation
* [SF #1767522] CHM -> single HTML conversion


arCHMage 0.1.9
==============
Changes/New features:

* New option - 'dump' for dumping HTML data from CHM file as Plain Text